--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: Inter, Arial, Helvetica, sans-serif;
 }
 
 .name {
@@ -49,21 +50,23 @@
 }
 
 .table__hobbies {
-    border: 1px solid green;
+    border-top: 1px solid #5A9645;
+    border-left: 1px solid #5A9645;
+    border-bottom: 1px solid #5A9645;
     border-radius: 10px 0 0 10px;
 }
 
 .table__hobbies__title,
 .table__social__title {
-    border-bottom: 1px solid green;
+    border-bottom: 1px solid #5A9645;
     text-align: center;
-    color: green;
+    color: #5A9645;
     padding: 5px 0;
     font-weight: bold;
 }
 
 .table__social {
-    border: 1px solid green;
+    border: 1px solid #5A9645;
     border-radius: 0 10px 10px 0;
 }
 
@@ -72,8 +75,87 @@
   margin: 10px auto;
 }
 
-.table__list__item:hover {
-    cursor: pointer;
-    color: green;
+.table__content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;
 }
 
+.table__list__item:hover {
+    cursor: pointer;
+    color: #5A9645;
+}
+
+.table__list__item>a {
+  text-decoration: none;
+  color: black;
+}
+
+.title {
+    background-color: #5A9645;
+    border-radius: 10px;
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    padding: 5px 0;
+    margin-top: 50px;
+}
+.technologies {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+.technologies__item {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+    padding: 20px;
+    border-radius: 10px;
+    transition: all 0.5s ease-in-out;
+}
+.technologies__item>img {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+}
+.technologies__item:hover {
+  box-shadow: 0 4px 20px 0 #5A9645;
+  cursor: pointer;
+}
+/* .form {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+} */
+
+.input__name {
+    margin-top: 10px;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 5px;
+    width: 45%;
+}
+.input_tel {
+    margin-top: 10px;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 5px;
+    width: 45%;
+}
+.textarea {
+    width:100%;
+    margin-top: 10px
+}
+.button {
+    background-color: #5A9645;
+    border: 8px solid #5A9645;
+    border-radius: 5px;
+    color: white;
+    margin-top: 10px;
+}
