--- a/style.css
+++ b/style.css
@@ -22,7 +22,9 @@
     gap: 30px;
     padding: 30px 0;
 }
-
+.header__img {
+    border-radius: 50%;
+}
 .header__info {
     flex-grow: 1;
     display: flex;
@@ -124,38 +126,36 @@
   box-shadow: 0 4px 20px 0 #5A9645;
   cursor: pointer;
 }
-/* .form {
-    margin-top: 10px;
-    display: flex;
-    justify-content: center;
-} */
-
-.input__name {
-    margin-top: 10px;
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 5px;
-    width: 45%;
+.form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    margin-top: 20px;
 }
-.input_tel {
-    margin-top: 10px;
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 5px;
-    width: 45%;
+.form__input {
+    padding: 5px 10px;
+    border-color: #B8B8B8;
+    border-radius: 10px;
 }
-.textarea {
-    width:100%;
-    margin-top: 10px
+.form__textarea {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    border-color: #B8B8B8;
+    border-radius: 10px;
+}
+.div__button {
+    display: flex;
+    margin-top: 10px;
+    justify-content: center;
 }
 .button {
     background-color: #5A9645;
     border: 8px solid #5A9645;
-    border-radius: 5px;
+    border-radius: 10px;
     color: white;
-    margin-top: 10px;
+}
+.button:hover {
+    cursor: pointer;
+    background-color: #5a8b48;
+    border-color: #5a8b48;
 }
